src/main/java/example/mcroservice/users/errors/my_exceptions/Delete_data_exception.java
package example.mcroservice.users.errors.my_exceptions;

public class Delete_data_exception extends My_exceptions{

  //CONSTRUCTOR----------------------------------------------------------------
  public Delete_data_exception(String msg) {
    super(msg, "DeleteDataException");
  }
  
}
